# PopupChatKit

./: .github_release_checklist.txt  .gitignore  IMPLEMENTATION_REPORT.md  LICENSE  PROJECT_STATUS.md  QUICK_START.md  README.md  TECHNICAL_SUMMARY.md  UPGRADE_AI_TOOL.md  test_ai_draw.md
ai-chat-ui/: index.html  功能点梳理.md  开发文档.md
backend/: .env  .env.example  agents.py  database.py  init_db.sql  main.py  pyproject.toml  test_gaode_api.py  test_simple.py  test_tool.py  test_weather_tool.py
data/: chat.db  chat.db-shm  chat.db-wal
frontend/embedded/: README.md  demo.html  popup.js  simple.html
frontend/standalone/: chat.html  test_draw.html
演示/: README.md  vue-demo.html
